--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body{
   transition:opacity 1.2s cubic-bezier(.2,.7,.1,1);
 }
 
-/* ===== BACKGROUND ===== */
+/* ===== BACKGROUND CANVAS ===== */
 canvas{
   position:fixed;
   inset:0;
@@ -46,7 +46,7 @@ canvas{
   z-index:1000;
 }
 
-/* ===== HEADER ===== */
+/* ===== NAV (FLOATING HEADER) ===== */
 nav{
   position:fixed;
   top:0;
@@ -74,8 +74,8 @@ nav span{
   text-transform:uppercase;
   color:#aaa;
   cursor:pointer;
-  padding-top:4px;
   transition:.4s;
+  padding-top:4px; /* ↓ ajuste fino vertical */
 }
 
 nav span:hover{
@@ -134,7 +134,7 @@ p{
   margin-left:0.35vw;
 }
 
-/* ===== GRID ===== */
+/* ===== PORTFOLIO GRID ===== */
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
@@ -190,7 +190,6 @@ footer{
   <span data-scroll="4">Contacto</span>
 </nav>
 
-<!-- ===== INICIO ===== -->
 <section class="section">
   <div class="content-center">
     <h1 id="heroTitle"></h1>
@@ -200,7 +199,6 @@ footer{
   </div>
 </section>
 
-<!-- ===== SOBRE MÍ ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Sobre mí</h1>
@@ -211,7 +209,6 @@ footer{
   </div>
 </section>
 
-<!-- ===== PORTFOLIO ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Portfolio</h1>
@@ -223,7 +220,6 @@ footer{
   </div>
 </section>
 
-<!-- ===== CV ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">CV</h1>
@@ -233,7 +229,6 @@ footer{
   </div>
 </section>
 
-<!-- ===== CONTACTO ===== -->
 <section class="section">
   <div class="content-left">
     <h1 class="reveal">Contacto</h1>
@@ -244,122 +239,86 @@ footer{
 <footer>INDUSTRIAL DESIGN</footer>
 
 <script>
-
-/* ===== ENTRADA ===== */
 window.addEventListener("load",()=>document.body.style.opacity="1");
 
-/* ===== CURSOR ===== */
-const cursor=document.querySelector(".cursor");
+/* Cursor */
+const c=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0,v=0,lx=0,ly=0;
-
 addEventListener("mousemove",e=>{
   mx=e.clientX; my=e.clientY;
-  v=Math.hypot(mx-lx,my-ly);
-  lx=mx; ly=my;
+  v=Math.hypot(mx-lx,my-ly); lx=mx; ly=my;
 });
-
-(function animateCursor(){
+(function anim(){
   const s=0.12+Math.min(v*0.02,0.35);
-  x+=(mx-x)*s;
-  y+=(my-y)*s;
-  cursor.style.left=x+"px";
-  cursor.style.top=y+"px";
-  requestAnimationFrame(animateCursor);
+  x+=(mx-x)*s; y+=(my-y)*s;
+  c.style.left=x+"px"; c.style.top=y+"px";
+  requestAnimationFrame(anim);
 })();
 
-/* ===== HERO TEXT ===== */
-const hero=document.getElementById("heroTitle");
-"Industrial Design".split("").forEach((c,i)=>{
+/* Hero text */
+const h=document.getElementById("heroTitle");
+"Industrial Design".split("").forEach((ch,i)=>{
   const s=document.createElement("span");
-  s.textContent=c;
+  s.textContent=ch;
   s.style.opacity=0;
   s.style.display="inline-block";
   s.style.transform="translateY(40px)";
   s.style.filter="blur(8px)";
   s.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
-  hero.appendChild(s);
+  h.appendChild(s);
 });
+setTimeout(()=>h.querySelectorAll("span").forEach(s=>{
+  s.style.opacity=1; s.style.transform="translateY(0)"; s.style.filter="blur(0)";
+}),200);
 
-setTimeout(()=>{
-  hero.querySelectorAll("span").forEach(s=>{
-    s.style.opacity=1;
-    s.style.transform="translateY(0)";
-    s.style.filter="blur(0)";
-  });
-},200);
+/* Reveal */
+const obs=new IntersectionObserver(e=>e.forEach(i=>i.isIntersecting&&i.target.classList.add("visible")),{threshold:.2});
+document.querySelectorAll(".reveal").forEach(el=>obs.observe(el));
 
-/* ===== SCROLL REVEAL ===== */
-const observer=new IntersectionObserver(e=>{
-  e.forEach(i=>i.isIntersecting&&i.target.classList.add("visible"));
-},{threshold:.2});
-
-document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
-
-/* ===== HEADER SCROLL EFFECT ===== */
+/* Nav scroll effect */
 addEventListener("scroll",()=>{
-  const nav=document.querySelector("nav");
+  const n=document.querySelector("nav");
   if(scrollY>40){
-    nav.style.background="rgba(10,10,10,0.65)";
-    nav.style.backdropFilter="blur(16px)";
+    n.style.background="rgba(10,10,10,0.65)";
+    n.style.backdropFilter="blur(16px)";
   }else{
-    nav.style.background="rgba(10,10,10,0.45)";
-    nav.style.backdropFilter="blur(12px)";
+    n.style.background="rgba(10,10,10,0.45)";
+    n.style.backdropFilter="blur(12px)";
   }
 });
 
-/* ===== NAV SCROLL WITH OFFSET ===== */
-const headerOffset = 100;
-
-document.querySelectorAll("nav span").forEach(btn=>{
-  btn.addEventListener("click",()=>{
-    const section=document.querySelectorAll(".section")[btn.dataset.scroll];
-    const y=section.getBoundingClientRect().top + window.pageYOffset - headerOffset;
-
-    window.scrollTo({
-      top:y,
-      behavior:"smooth"
-    });
-  });
+/* Nav scroll */
+document.querySelectorAll("nav span").forEach(b=>{
+  b.onclick=()=>document.querySelectorAll(".section")[b.dataset.scroll]
+    .scrollIntoView({behavior:"smooth"});
 });
 
-/* ===== THREE BACKGROUND ===== */
+/* Three background */
 const scene=new THREE.Scene();
-const camera=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
-camera.position.z=4;
-
-const renderer=new THREE.WebGLRenderer({alpha:true});
-renderer.setSize(innerWidth,innerHeight);
-renderer.setPixelRatio(Math.min(devicePixelRatio,2));
-document.body.appendChild(renderer.domElement);
-
-const mesh=new THREE.Mesh(
+const cam=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
+cam.position.z=4;
+const r=new THREE.WebGLRenderer({alpha:true});
+r.setSize(innerWidth,innerHeight);
+r.setPixelRatio(Math.min(devicePixelRatio,2));
+document.body.appendChild(r.domElement);
+const m=new THREE.Mesh(
   new THREE.IcosahedronGeometry(1.8,2),
-  new THREE.MeshStandardMaterial({
-    wireframe:true,
-    color:0xffffff,
-    transparent:true,
-    opacity:.05
-  })
+  new THREE.MeshStandardMaterial({wireframe:true,color:0xffffff,opacity:.05,transparent:true})
 );
-scene.add(mesh);
-
-const light=new THREE.PointLight(0xffffff,1);
-light.position.set(5,5,5);
-scene.add(light);
-
-(function animate(){
-  mesh.rotation.x+=.0015;
-  mesh.rotation.y+=.0015;
-  renderer.render(scene,camera);
-  requestAnimationFrame(animate);
+scene.add(m);
+const l=new THREE.PointLight(0xffffff,1);
+l.position.set(5,5,5);
+scene.add(l);
+(function loop(){
+  m.rotation.x+=.0015; m.rotation.y+=.0015;
+  r.render(scene,cam);
+  requestAnimationFrame(loop);
 })();
-
 onresize=()=>{
-  renderer.setSize(innerWidth,innerHeight);
-  camera.aspect=innerWidth/innerHeight;
-  camera.updateProjectionMatrix();
+  r.setSize(innerWidth,innerHeight);
+  cam.aspect=innerWidth/innerHeight;
+  cam.updateProjectionMatrix();
 };
-
 </script>
 
 </body>
