--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ document.querySelectorAll("nav span").forEach(btn=>{
   btn.addEventListener("click",()=>{
     const section=document.querySelectorAll(".section")[btn.dataset.scroll];
     const headerHeight=document.querySelector("nav").offsetHeight;
-    const offset=20; // ← ajuste aplicado
+    const offset=-10; // ← aplicado
 
     const targetY=
       section.getBoundingClientRect().top +
