--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
 
 <style>
+
 /* ===== RESET ===== */
-*{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif;}
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:"Inter",sans-serif;
+}
 
 body{
   background:#0a0a0a;
@@ -22,30 +28,56 @@ body{
 }
 
 /* ===== BACKGROUND ===== */
-canvas{position:fixed;inset:0;z-index:-1;}
+canvas{
+  position:fixed;
+  inset:0;
+  z-index:-1;
+}
 
 /* ===== CURSOR ===== */
 .cursor{
-  position:fixed;width:8px;height:8px;border:1px solid #fff;border-radius:50%;
-  pointer-events:none;transform:translate(-50%,-50%);z-index:1000;
+  position:fixed;
+  width:8px;
+  height:8px;
+  border:1px solid #fff;
+  border-radius:50%;
+  pointer-events:none;
+  transform:translate(-50%,-50%);
+  z-index:1000;
 }
 
 /* ===== HEADER ===== */
 nav{
-  position:fixed;top:0;left:50%;transform:translateX(-50%);
-  width:100%;height:80px;
-  display:flex;justify-content:center;align-items:center;gap:50px;
+  position:fixed;
+  top:0;
+  left:50%;
+  transform:translateX(-50%);
+  width:100%;
+  height:80px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  gap:50px;
   background:rgba(10,10,10,0.45);
   backdrop-filter:blur(12px);
+  -webkit-backdrop-filter:blur(12px);
   z-index:100;
   transition:background .4s ease, backdrop-filter .4s ease;
 }
 
 nav span{
-  font-size:11px;letter-spacing:.3em;text-transform:uppercase;
-  color:#aaa;cursor:pointer;transition:.4s;padding-top:4px;
+  font-size:11px;
+  letter-spacing:.3em;
+  text-transform:uppercase;
+  color:#aaa;
+  cursor:pointer;
+  transition:.4s;
+  padding-top:4px;
 }
-nav span:hover{color:#fff;}
+
+nav span:hover{
+  color:#fff;
+}
 
 /* ===== SECTIONS ===== */
 .section{
@@ -57,34 +89,16 @@ nav span:hover{color:#fff;}
 }
 
 /* ===== CONTENT ===== */
-.content-center{max-width:900px;text-align:left;margin-left:1vw;}
-.content-left{max-width:1100px;width:100%;margin-left:6vw;}
-
-/* ===== SOBRE MÍ LAYOUT ===== */
-.about-grid{
-  display:grid;
-  grid-template-columns:1fr 0.9fr; /* más pegado */
-  gap:40px; /* menos aire */
-  align-items:start;
+.content-center{
+  max-width:900px;
+  text-align:left;
+  margin-left:1vw;
 }
 
-/* ===== TEXTO SOBRE MÍ ===== */
-.about-text{
-  max-width:520px;           /* más estrecho */
-  text-align:justify;        /* justificado */
-}
-
-/* ===== FOTO ===== */
-.about-photo{
+.content-left{
+  max-width:900px;
   width:100%;
-  max-width:340px;
-  opacity:.9;
-  filter:grayscale(100%);
-  transition:.6s;
-}
-.about-photo:hover{
-  opacity:1;
-  filter:grayscale(0%);
+  margin-left:6vw;
 }
 
 /* ===== TYPO ===== */
@@ -94,18 +108,28 @@ h1{
   line-height:1.05;
 }
 
-.content-center h1{font-size:clamp(84px,7vw,140px);}
-h2{font-size:30px;font-weight:400;margin-bottom:18px;}
+.content-center h1{
+  font-size:clamp(84px,7vw,140px);
+}
+
+h2{
+  font-size:30px;
+  font-weight:400;
+  margin-bottom:18px;
+}
 
 p{
   margin-top:18px;
   font-size:16.5px;
   color:#aaa;
+  max-width:620px;
   line-height:1.65;
 }
 
 .content-left p,
-.content-center p{margin-left:0.35vw;}
+.content-center p{
+  margin-left:0.35vw;
+}
 
 /* ===== GRID ===== */
 .grid{
@@ -120,7 +144,10 @@ p{
   padding-top:18px;
   transition:.4s;
 }
-.project:hover{transform:translateY(-8px);}
+
+.project:hover{
+  transform:translateY(-8px);
+}
 
 /* ===== REVEAL ===== */
 .reveal{
@@ -129,6 +156,7 @@ p{
   filter:blur(8px);
   transition:1.2s cubic-bezier(.2,.7,.1,1);
 }
+
 .reveal.visible{
   opacity:1;
   transform:translateY(0);
@@ -145,15 +173,6 @@ footer{
   border-top:1px solid #1c1c1c;
 }
 
-/* ===== RESPONSIVE ===== */
-@media(max-width:900px){
-  .about-grid{
-    grid-template-columns:1fr;
-  }
-  .about-photo{
-    margin-top:40px;
-  }
-}
 </style>
 </head>
 <body>
@@ -172,29 +191,25 @@ footer{
 <section class="section">
   <div class="content-center">
     <h1 id="heroTitle"></h1>
-    <p class="reveal">Diseño industrial con enfoque arquitectónico y precisión estructural.</p>
+    <p class="reveal">
+      Diseño industrial con enfoque arquitectónico y precisión estructural.
+    </p>
   </div>
 </section>
 
 <!-- ===== SOBRE MÍ ===== -->
 <section class="section">
-  <div class="content-left about-grid">
-    
-    <div class="about-text">
-      <h1 class="reveal">Sobre mí</h1>
-      <p class="reveal">
-        Soy ingeniero en diseño industrial de 24 años, con base en Valencia. He cursado mis estudios
-        en la Universitat Politècnica de València (UPV), tras completar mis primeros años en la
-        Universitat Jaume I (UJI), y cuento además con una formación profesional en electricidad.
-        <br><br>
-        Me considero una persona detallista y organizada, con un alto nivel de exigencia en cada
-        proyecto. Mis principales intereses son la impresión 3D aplicada al prototipado y,
-        actualmente, el diseño y desarrollo de páginas web.
-      </p>
-    </div>
-
-    <img src="foto.jpg" alt="Sobre mí" class="about-photo reveal">
-
+  <div class="content-left">
+    <h1 class="reveal">Sobre mí</h1>
+    <p class="reveal">
+      Soy ingeniero en diseño industrial de 24 años, con base en Valencia. He cursado mis estudios
+      en la Universitat Politècnica de València (UPV), tras completar mis primeros años en la
+      Universitat Jaume I (UJI), y cuento además con una formación profesional en electricidad.
+      <br><br>
+      Me considero una persona detallista y organizada, con un alto nivel de exigencia en cada
+      proyecto. Mis principales intereses son la impresión 3D aplicada al prototipado y,
+      actualmente, el diseño y desarrollo de páginas web.
+    </p>
   </div>
 </section>
 
@@ -232,45 +247,66 @@ footer{
 <footer>INDUSTRIAL DESIGN</footer>
 
 <script>
-window.addEventListener("load",()=>document.body.style.opacity="1");
 
-/* Cursor */
+/* ===== ENTRADA ===== */
+window.addEventListener("load",()=>{
+  document.body.style.opacity="1";
+});
+
+/* ===== CURSOR ===== */
 const c=document.querySelector(".cursor");
 let mx=0,my=0,x=0,y=0,v=0,lx=0,ly=0;
+
 addEventListener("mousemove",e=>{
-  mx=e.clientX;my=e.clientY;
-  v=Math.hypot(mx-lx,my-ly);lx=mx;ly=my;
+  mx=e.clientX;
+  my=e.clientY;
+  v=Math.hypot(mx-lx,my-ly);
+  lx=mx;
+  ly=my;
 });
-(function loop(){
+
+(function animateCursor(){
   const s=0.12+Math.min(v*0.02,0.35);
-  x+=(mx-x)*s;y+=(my-y)*s;
-  c.style.left=x+"px";c.style.top=y+"px";
-  requestAnimationFrame(loop);
+  x+=(mx-x)*s;
+  y+=(my-y)*s;
+  c.style.left=x+"px";
+  c.style.top=y+"px";
+  requestAnimationFrame(animateCursor);
 })();
 
-/* Hero text */
+/* ===== HERO TEXT ===== */
 const h=document.getElementById("heroTitle");
 "Industrial Design".split("").forEach((ch,i)=>{
-  const sp=document.createElement("span");
-  sp.textContent=ch;
-  sp.style.opacity=0;
-  sp.style.display="inline-block";
-  sp.style.transform="translateY(40px)";
-  sp.style.filter="blur(8px)";
-  sp.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
-  h.appendChild(sp);
+  const span=document.createElement("span");
+  span.textContent=ch;
+  span.style.opacity=0;
+  span.style.display="inline-block";
+  span.style.transform="translateY(40px)";
+  span.style.filter="blur(8px)";
+  span.style.transition=`all .5s cubic-bezier(.2,.7,.1,1) ${i*0.025}s`;
+  h.appendChild(span);
 });
-setTimeout(()=>h.querySelectorAll("span").forEach(sp=>{
-  sp.style.opacity=1;
-  sp.style.transform="translateY(0)";
-  sp.style.filter="blur(0)";
-}),200);
 
-/* Reveal */
-const obs=new IntersectionObserver(e=>e.forEach(i=>i.isIntersecting&&i.target.classList.add("visible")),{threshold:.2});
-document.querySelectorAll(".reveal").forEach(el=>obs.observe(el));
+setTimeout(()=>{
+  h.querySelectorAll("span").forEach(span=>{
+    span.style.opacity=1;
+    span.style.transform="translateY(0)";
+    span.style.filter="blur(0)";
+  });
+},200);
 
-/* Header scroll */
+/* ===== SCROLL REVEAL ===== */
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("visible");
+    }
+  });
+},{threshold:.2});
+
+document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
+
+/* ===== HEADER BLUR ON SCROLL ===== */
 addEventListener("scroll",()=>{
   const n=document.querySelector("nav");
   if(scrollY>40){
@@ -282,43 +318,64 @@ addEventListener("scroll",()=>{
   }
 });
 
-/* Nav scroll with offset */
+/* ===== NAV SCROLL WITH OFFSET ===== */
 document.querySelectorAll("nav span").forEach(btn=>{
-  btn.onclick=()=>{
+  btn.addEventListener("click",()=>{
     const section=document.querySelectorAll(".section")[btn.dataset.scroll];
     const headerHeight=document.querySelector("nav").offsetHeight;
-    const offset=-100;
-    const y=section.getBoundingClientRect().top+pageYOffset-headerHeight-offset;
-    scrollTo({top:y,behavior:"smooth"});
-  };
+    const offset=20; // ← ajuste aplicado
+
+    const targetY=
+      section.getBoundingClientRect().top +
+      window.pageYOffset -
+      headerHeight -
+      offset;
+
+    window.scrollTo({
+      top:targetY,
+      behavior:"smooth"
+    });
+  });
 });
 
-/* Three background */
+/* ===== THREE BACKGROUND ===== */
 const scene=new THREE.Scene();
 const cam=new THREE.PerspectiveCamera(60,innerWidth/innerHeight,.1,100);
 cam.position.z=4;
-const r=new THREE.WebGLRenderer({alpha:true});
-r.setSize(innerWidth,innerHeight);
-r.setPixelRatio(Math.min(devicePixelRatio,2));
-document.body.appendChild(r.domElement);
+
+const renderer=new THREE.WebGLRenderer({alpha:true});
+renderer.setSize(innerWidth,innerHeight);
+renderer.setPixelRatio(Math.min(devicePixelRatio,2));
+document.body.appendChild(renderer.domElement);
+
 const mesh=new THREE.Mesh(
   new THREE.IcosahedronGeometry(1.8,2),
-  new THREE.MeshStandardMaterial({wireframe:true,color:0xffffff,opacity:.05,transparent:true})
+  new THREE.MeshStandardMaterial({
+    wireframe:true,
+    color:0xffffff,
+    opacity:.05,
+    transparent:true
+  })
 );
 scene.add(mesh);
-const l=new THREE.PointLight(0xffffff,1);
-l.position.set(5,5,5);
-scene.add(l);
-(function anim(){
-  mesh.rotation.x+=.0015;mesh.rotation.y+=.0015;
-  r.render(scene,cam);
-  requestAnimationFrame(anim);
+
+const light=new THREE.PointLight(0xffffff,1);
+light.position.set(5,5,5);
+scene.add(light);
+
+(function animate(){
+  mesh.rotation.x+=.0015;
+  mesh.rotation.y+=.0015;
+  renderer.render(scene,cam);
+  requestAnimationFrame(animate);
 })();
+
 onresize=()=>{
-  r.setSize(innerWidth,innerHeight);
+  renderer.setSize(innerWidth,innerHeight);
   cam.aspect=innerWidth/innerHeight;
   cam.updateProjectionMatrix();
 };
+
 </script>
 
 </body>
